--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "sass": "^1.63.6",
     "typescript": "5.1.6"
