--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "animate.css": "^4.1.1",
+    "axios": "^1.5.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "next": "13.4.10",
