--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
+    "@types/node": "^20.8.2",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.9",
     "animate.css": "^4.1.1",
-    "axios": "^1.5.0",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.45.2",
-    "react-icons": "^4.10.1",
-    "sass": "^1.63.6",
-    "typescript": "5.1.6"
+    "axios": "^1.5.1",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.4",
+    "next": "^13.5.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "sass": "^1.68.0",
+    "typescript": "^5.2.2"
   }
 }
